mobile overflow resolved

--- a/luckystyles.css
+++ b/luckystyles.css
@@ -134,6 +134,11 @@ h2 {
         height: auto;
     }
 
+.logo {
+    position: center;
+    width: 90vw;
+}
+
 /*========================================================================
                                 DROP
 =======================================================================*/
@@ -157,6 +162,14 @@ h2 {
 div.description {
     padding: 15px;
     text-align: center;
+}
+
+.frog {
+    width: 80vw;
+}
+
+.dan {
+    width: 90vw;
 }
 
 .library, .spiders, .github, .linkdin {
@@ -250,6 +263,10 @@ iframe {
         padding-top: 5px;
     }
 
+    .frog, .dan {
+        width: auto;
+    }
+
     /*========================================================================
                                 RESUME
     =======================================================================*/
@@ -281,6 +298,10 @@ iframe {
         height: auto;
         padding-top: 350px; /* space before main title logo */
         padding-bottom: 500px; /* space after */
+    }
+
+    .logo {
+        width: 60vw;
     }
     /*========================================================================
                                 DESKTOP GENERIC
@@ -320,6 +341,10 @@ iframe {
                       CHONK SCREENS 1400+ BIG BOI HOURS
 =======================================================================*/
 @media screen and (min-width: 1400px) {
+    .logo {
+        width: 40vw;
+    }
+
     .library, .spiders, .github, .linkdin {
         width: 100px;
     }
